# NexusOpenCLI-plugins-registry

./: LICENSE  README.md  README.zh-CN.md  plugins.json
doctor/: docs.md
plugins/doctor/: LICENSE  README.md  pyproject.toml
plugins/doctor/src/ncli_doctor/: plugin.py
plugins/doctor/src/ncli_doctor/locales/: messages.pot
plugins/doctor/src/ncli_doctor/locales/zh/LC_MESSAGES/: messages.mo  messages.po
